<resources>
    <string name="lg_english">English</string>
    <string name="lg_french">French</string>
    <string name="lg_hindi">Hindi</string>
    <string name="lg_china">Chinese</string>
    <string name="lg_spanish">Spanish</string>
    <string name="lg_portuguese">Portuguese</string>
    <string name="app_name">Alarmy</string>
    <string name="language">Language</string>
    <string name="rate_us">Rate Us</string>
    <string name="rate_on_gg">Do you like the app?</string>
    <string name="oh_no">Oh No!</string>
    <string name="we_like_you_too">We love you too!</string>
    <string name="txt_des_rate_1">Please give us some feedback</string>
    <string name="txt_des_rate_2">Please give us some feedback</string>
    <string name="txt_des_rate_3">Please give us some feedback</string>
    <string name="txt_des_rate_4">Thanks for your feedback</string>
    <string name="txt_des_rate_5">Thanks for your feedback</string>
    <string name="txt_des_rate_0">Let us know your experience</string>
    <string name="permission_device">requires permission to use the {device’s camera and folder}</string>
    <string name="txt_music">Music</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_name">Alarm name:</string>
    <string name="enter">Enter</string>
    <string name="MO">MO</string>
    <string name="TU">TU</string>
    <string name="WE">WE</string>
    <string name="TH">TH</string>
    <string name="FR">FR</string>
    <string name="SA">SA</string>
    <string name="SU">SU</string>
    <string name="monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="task">Task</string>
    <string name="alarm_sound">Alarm sound</string>
    <string name="snooze">Snooze</string>
    <string name="default_">Default</string>
    <string name="workingDays">Working days</string>
    <string name="weekend">Weekend</string>
    <string name="everyDay">Everyday</string>
    <string name="bedtime">Bedtime</string>
    <string name="reminder">Reminders</string>
    <string name="myday">My day</string>
    <string name="setting">Setting</string>
    <string name="quick_alarm">Quick Alarm</string>
    <string name="save">Save</string>
    <string name="bedtime_">Bedtime: </string>
    <string name="sleep_sound">Sleep sounds</string>
    <string name="minute">%d m</string>
    <string name="bedtime_setting">Bedtime settings</string>
    <string name="confirm">Confirm</string>
    <string name="sound_timer">Sound timer</string>
    <string name="all">All</string>
    <string name="nature">Nature</string>
    <string name="meditation">Meditation</string>
    <string name="white_music">White music</string>
    <string name="ASMR">ASMR</string>
    <string name="slightly_rain">Slightly rain</string>
    <string name="soluble_bath">Soluble bath salts</string>
    <string name="fireplace">Fireplace</string>
    <string name="light_white_noise">Light white noise</string>
    <string name="type_the_keyboard">Type the keyboard</string>
    <string name="wave">Waves</string>
    <string name="moderate_rain">Moderate rain</string>
    <string name="river_in_forest">River in the forest</string>
    <string name="heavy_rain_1">Heavy rain</string>
    <string name="heavy_rain_2">Heavy rain</string>
    <string name="temple_bell">Temple bell</string>
    <string name="wind_chimes">Wind chimes</string>
    <string name="zen">Zen</string>
    <string name="white_noise">White noise</string>
    <string name="brain_wave">Brainwave</string>
    <string name="heartbeat">Heartbeat</string>
    <string name="alpha_wave">Alpha wave</string>
    <string name="beta_wave">Beta wave</string>
    <string name="tea">Tea</string>
    <string name="relaxing_bath">Relaxing bath</string>
    <string name="type_writer">Typewrite</string>
    <string name="coloring_book">Coloring book</string>
    <string name="pencil">Pencil</string>
    <string name="bedtime_running">Sound bedtime is running</string>
    <string name="text_intro1">Helping you wake up daily</string>
    <string name="text_intro2">Instant wake up</string>
    <string name="text_intro3">Good morning with all our tools</string>
    <string name="text1_intro1">Waking up on time makes your day a success</string>
    <string name="text2_intro1">Tasks, sounds... help break your sleep inertia</string>
    <string name="text3_intro1">Get access to timers, reminder, and other tools to help you organize your day</string>
    <string name="text_create_first">Create first Alarm</string>
    <string name="next">Next</string>
    <string name="set_alarm_time">Set first alarm time</string>
    <string name="choose_sound">Choose the sound you like</string>
    <string name="alarm_bell">Alarm bell</string>
    <string name="peaceful">Peaceful Sound</string>
    <string name="happy_sound">Happy Sound</string>
    <string name="loud_sound">Loud Sound</string>
    <string name="math">Math</string>
    <string name="memorize">Memorize</string>
    <string name="shake_action">Shake</string>
    <string name="shake_the_phone">Shake the phone</string>
    <string name="rewrite">Rewrite</string>
    <string name="step">Step</string>
    <string name="qr_code">Barcode/QR code</string>
    <string name="turn_off">No Task</string>
    <string name="alarm_task">Choose the alarm task you like</string>
    <string name="next_alarm">Next alarm</string>
    <string name="time_will_ring">The alarm will ring after %dh%dmin</string>
    <string name="time_will_ring_min">The alarm will ring after %dmin</string>
    <string name="time_will_ring_day">The alarm will ring after %d day %d hours</string>
    <string name="alarm_comming_soon">Alarm coming soon</string>
    <string name="delete">Delete</string>
    <string name="priview">Preview</string>
    <string name="template">Set as template</string>
    <string name="undo_skip">Undo skip next</string>
    <string name="duplicate">Duplicate</string>
    <string name="start_the_task">Start the task</string>
    <string name="exit_priview">Exit preview</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_alarm_turn_on">No alarm turned on</string>
    <string name="create_new">No upcoming alarms</string>
    <string name="squat">Squat</string>
    <string name="here_an_example">Here’s an example:</string>
    <string name="here_an_example_squat">Take your phone and squat until you have reached the number of squats you have chosen. The alarm will go off</string>
    <string name="here_an_example_step">Take your phone and walk until you have reached the number of steps you have chosen. The alarm will go off</string>
    <string name="here_an_example_shake">Shake your phone as many times as you have selected. The alarm will go off</string>
    <string name="number_of_squat">Number of squats</string>
    <string name="number_of_shake">Number of shakes</string>
    <string name="action_save">Save</string>
    <string name="action_preview">Preview</string>
    <string name="stand_up_and_get_ready">Stand up and get ready</string>
    <string name="exit_preview">Exit preview</string>
    <string name="start_now">Start now</string>
    <string name="hold_with_both_hands">Hold with both hands</string>
    <string name="start_squat">Start squatting</string>
    <string name="txt_off">Off</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txtok">Ok</string>
    <string name="txtDefault">Default</string>
    <string name="txt_more_task">More task</string>
    <string name="number_of_steps">Number of steps</string>
    <string name="number_of_tasks">Number of tasks</string>
    <string name="number_of_equations">Number of equations</string>
    <string name="none">None</string>
    <string name="easiest">Easiest</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="hardest">Hardest</string>
    <string name="pad_number_0" translatable="false">0</string>
    <string name="pad_number_1" translatable="false">1</string>
    <string name="pad_number_2" translatable="false">2</string>
    <string name="pad_number_3" translatable="false">3</string>
    <string name="pad_number_4" translatable="false">4</string>
    <string name="pad_number_5" translatable="false">5</string>
    <string name="pad_number_6" translatable="false">6</string>
    <string name="pad_number_7" translatable="false">7</string>
    <string name="pad_number_8" translatable="false">8</string>
    <string name="pad_number_9" translatable="false">9</string>
    <string name="cd_back_button" translatable="false">Back button</string>
    <string name="cd_validate_button" translatable="false">Validate button</string>
    <string name="next_round">Next round</string>
    <string name="tv_check">You made a mistake! Fix it</string>
    <string name="choose_task_title">Choose task</string>
    <string name="alarm_preview_is_over">Alarm preview is over</string>
    <string name="awaken_the_brain">Awaken the brain</string>
    <string name="awaken_the_body">Awaken the body</string>
    <string name="permision_title">The Application needs Below Permission to provide phone finder by clapping</string>
    <string name="permission_label">Permission</string>
    <string name="go_title">Go</string>
    <string name="exact_alarm">Exact alarm</string>
    <string name="snoozed_time">Snooze %d time</string>
    <string name="cant_enable_snooze">Cannot enable snooze in preview mode</string>
    <string name="dont_set_alarm">Dont set alarm</string>
    <string name="click_create">Click “add alarm button” to create an alarm</string>
    <string name="keep_in_mind">Keep in mind (%d)</string>
    <string name="detects_color_cells">Detects %d color cells</string>
    <string name="incorrect">Incorrect!</string>
    <string name="try_again">Please try again</string>
    <string name="delete_alarm">Delete alarm. </string>
    <string name="alarm_is_set_hour">Alarm is set for %d h %d min from now</string>
    <string name="alarm_is_set_day">Alarm is set for %d day %d hour from now</string>
    <string name="alarm_priview_over">Alarm preview is over</string>
    <string name="txt_find_and_scan_the_code_part_of_your_morning_schedule">Find and scan the code part of your\nmorning schedule</string>
    <string name="txt_addqr">Add barcode/QR code</string>
    <string name="txt_change_name">Change name</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_delete_select_code">Delete selected code?</string>
    <string name="txtsave">Save</string>
    <string name="txtdelete">Delete</string>
    <string name="txtqrtitle">Barcode name/QR code</string>
    <string name="notification">Notification</string>
    <string name="recognition">Recognition</string>
    <string name="camera">Camera</string>
    <string name="title_gr_code">Get ready to scan barcode/QR code</string>
    <string name="ready">I\'m ready</string>
    <string name="barcode_note_match">Barcode does not match</string>
    <string name="you_made_a_mistake_fix_it">You made a mistake! Fix it</string>
    <string name="skip_next">Skip next</string>
    <string name="start">Start</string>
    <string name="txt_save_on_exit">Discard unsaved changes before leaving?</string>
    <string name="txt_back">Back</string>
    <string name="txt_add">Add</string>
    <string name="apply">Apply</string>
    <string name="alarm_setting">Alarm setting</string>
    <string name="general">General</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="volume_sound">Volume and sound</string>
    <string name="increase_volume">Gradually increase volume</string>
</resources>