<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:columnCount="3"
    android:orientation="horizontal"
    android:rowCount="4">

    <TextView
        android:id="@+id/pad_number_1"
        style="@style/TextAppearance.AppCompat.PadNumber"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:text="@string/pad_number_1" />

    <TextView
        android:id="@+id/pad_number_2"
        style="@style/TextAppearance.AppCompat.PadNumber"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:text="@string/pad_number_2" />

    <TextView
        android:id="@+id/pad_number_3"
        style="@style/TextAppearance.AppCompat.PadNumber"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:text="@string/pad_number_3" />

    <TextView
        android:id="@+id/pad_number_4"
        style="@style/TextAppearance.AppCompat.PadNumber"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:text="@string/pad_number_4" />

    <TextView
        android:id="@+id/pad_number_5"
        style="@style/TextAppearance.AppCompat.PadNumber"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:text="@string/pad_number_5" />

    <TextView
        android:id="@+id/pad_number_6"
        style="@style/TextAppearance.AppCompat.PadNumber"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:text="@string/pad_number_6" />

    <TextView
        android:id="@+id/pad_number_7"
        style="@style/TextAppearance.AppCompat.PadNumber"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:text="@string/pad_number_7" />

    <TextView
        android:id="@+id/pad_number_8"
        style="@style/TextAppearance.AppCompat.PadNumber"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:text="@string/pad_number_8" />

    <TextView
        android:id="@+id/pad_number_9"
        style="@style/TextAppearance.AppCompat.PadNumber"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:text="@string/pad_number_9" />

    <ImageButton
        android:id="@+id/pad_number_left_icon"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimen_8"
        android:background="@drawable/bg_choose_day_none"
        android:contentDescription="@string/cd_back_button"
        android:src="@drawable/ic_delete_math" />

    <TextView
        android:id="@+id/pad_number_0"
        style="@style/TextAppearance.AppCompat.PadNumber"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:text="@string/pad_number_0" />

    <ImageButton
        android:id="@+id/pad_number_right_icon"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimen_8"
        android:background="@drawable/bg_done_numpad"
        android:contentDescription="@string/cd_validate_button"
        android:src="@drawable/ic_save_math" />

</GridLayout>