<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:fitsSystemWindows="true"
    tools:context=".view.settings.SettingFragment">

    <com.alarm.clock.reminder.alarmclock.simplealarm.resource.customView.BaseTextview
        android:id="@+id/header_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textColor="@color/newtral_6"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="@dimen/dimen_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_16"
        android:padding="@dimen/dimen_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_setting">

        <LinearLayout
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.alarm.clock.reminder.alarmclock.simplealarm.resource.customView.BaseTextview
                android:id="@+id/btn_alarm_setting"
                style="@style/text_view_item_setting"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_item_setting"
                android:text="@string/alarm_setting"
                android:textStyle="bold" />

            <com.alarm.clock.reminder.alarmclock.simplealarm.resource.customView.BaseTextview
                android:id="@+id/tvHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/general"
                android:textColor="@color/color_04"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:background="@drawable/bg_item_setting"
                android:orientation="vertical">

                <com.alarm.clock.reminder.alarmclock.simplealarm.resource.customView.BaseTextview
                    android:id="@+id/btn_language"
                    style="@style/text_view_item_setting"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:drawableStart="@drawable/ic_language"
                    android:text="@string/language" />

                <com.alarm.clock.reminder.alarmclock.simplealarm.resource.customView.BaseTextview
                    android:id="@+id/btn_rate_us"
                    style="@style/text_view_item_setting"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:drawableStart="@drawable/ic_rate_us"
                    android:text="@string/rate_us" />

                <com.alarm.clock.reminder.alarmclock.simplealarm.resource.customView.BaseTextview
                    android:id="@+id/btn_share"
                    style="@style/text_view_item_setting"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:drawableStart="@drawable/ic_share"
                    android:text="@string/share" />

                <com.alarm.clock.reminder.alarmclock.simplealarm.resource.customView.BaseTextview
                    android:id="@+id/btn_privacy_policy"
                    style="@style/text_view_item_setting"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:drawableStart="@drawable/ic_privacy_policy"
                    android:text="@string/privacy_policy" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ellipse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header_setting" />
</androidx.constraintlayout.widget.ConstraintLayout>
