<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="192dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:elevation="15dp"
    app:cardCornerRadius="8dp"
    android:layout_marginEnd="10dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lin_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_more_delete"/>
            <com.alarm.clock.reminder.alarmclock.simplealarm.resource.customView.BaseTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_marginStart="12dp"
                android:layout_gravity="center"
                style="@style/TextViewMore"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lin_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_more_priview"/>
            <com.alarm.clock.reminder.alarmclock.simplealarm.resource.customView.BaseTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priview"
                android:layout_marginStart="12dp"
                android:layout_gravity="center"
                style="@style/TextViewMore"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lin_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_more_template"/>
            <com.alarm.clock.reminder.alarmclock.simplealarm.resource.customView.BaseTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/template"
                android:layout_marginStart="12dp"
                android:layout_gravity="center"
                style="@style/TextViewMore"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lin_skip_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">
            <ImageView
                android:id="@+id/img_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_next_skip"/>
            <com.alarm.clock.reminder.alarmclock.simplealarm.resource.customView.BaseTextview
                android:id="@+id/txt_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip_next"
                android:layout_marginStart="12dp"
                android:layout_gravity="center"
                style="@style/TextViewMore"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lin_duplicate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_more_copy"/>
            <com.alarm.clock.reminder.alarmclock.simplealarm.resource.customView.BaseTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duplicate"
                android:layout_marginStart="12dp"
                android:layout_gravity="center"
                style="@style/TextViewMore"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
